--- a/Ozbay1-Activity4.html
+++ b/Ozbay1-Activity4.html
@@ -52,8 +52,8 @@
 	This is an advertisement place holder. One can use this space to load his/her ads
 </div>
 <div>
-    	<a href="http://validator.w3.org/check?uri=referer">Validate HTML</a> 
-		<a href="http://jigsaw.w3.org/css-validator/check/referer">Validate CSS</a>
+		<a href="https://validator.w3.org/check?uri=https://begumozb.github.io/Activity4/Ozbay1-Activity4.html">Validate HTML</a> <br>
+		<a href="https://jigsaw.w3.org/css-validator/validator?uri=https://begumozb.github.io/Activity4/Ozbay1-Activity4.html">Validate CSS</a>
 </div>
 
 </body>
