--- a/Ozbay1-Activity4.html
+++ b/Ozbay1-Activity4.html
@@ -8,7 +8,7 @@
 
 
 <div class="header" >
-	<div class="logo" width= "50px" height= "50px";>
+	<div class="logo">
 		<img src="griffen.jpg"  alt="image"/>
 	</div>
 	<div class="title">
@@ -16,7 +16,7 @@
 	</div>
 </div>
 <div class="content">
-	<div class="image" style="width: 100px; height: 100px;">
+	<div class="image">
 		<img src="images.jpg" alt="image" />
 	</div>
 	<div class="main">
